[package]
name = "bustapi"
version = "0.1.0"
edition = "2021"

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py39"] }
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }  # ✅ full enables Server + client + body etc
serde_json = "1"


[lib]
name = "bustapi"
crate-type = ["cdylib"]
